--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ body {
     object-fit: cover;
 }
 
-.fundo-branco {
+.fundo-vermelho {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: #FF0000;
     z-index: 1;
 }
 
@@ -44,6 +44,6 @@ body {
 
 .mensagem {
     font-size: 24px;
-    color: #ff0000;
+    color: #FFFFFF;
     font-family: Arial;
 }
